# grheat

./: .gitignore  .pages-ping  CHANGELOG.rst  CITATION.cff  LICENSE.txt  MANIFEST.in  Makefile  README.rst  jupyter-lite.json  pyproject.toml  release.txt  requirements.txt  setup.cfg  setup.py
.github/scripts/: update_citation.py
.github/workflows/: citation.yaml  pypi.yaml  test.yaml
api/contents/: all.json
docs/: 01-grin-lens-basics.ipynb  absorber.ipynb  absorber.rst  absorber_examples.ipynb  conf.py  exponential_column_source.rst  exponential_column_source_examples.ipynb  exponential_volume_source.rst  exponential_volume_source_examples.ipynb  grheat.rst  index.rst  line.rst  line_examples.ipynb  line_source.ipynb  planar_irradiation_of_absorber.ipynb  plane.rst  plane_examples.ipynb  plane_source.ipynb  point.rst  point_examples.ipynb  point_source.ipynb  pygrin.rst  requirements.txt
files/: absorber_examples.ipynb  exponential_column_source_examples.ipynb  exponential_volume_source_examples.ipynb  line_examples.ipynb  plane_examples.ipynb  point_examples.ipynb
grheat/: __init__.py  _common.py  absorber.py  absorbing_point.py  exp_plane_source.py  exp_source.py  exponential_column_source.py  exponential_volume_source.py  jupyter_lite_config.json  line_source.py  plane_source.py  point_source.py
lab/: index.html
pypi/: all.json  grheat-0.2.1-py3-none-any.whl  grheat-0.5.0-py3-none-any.whl  grheat-0.5.1-py3-none-any.whl
tests/: test_absorber.py  test_absorbing_point.py  test_all_notebooks.py  test_api_edge_cases.py  test_exponential_column_source.py  test_exponential_volume_source.py  test_line.py  test_plane.py  test_point.py
