[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grheat"]
include-package-data = false

[project]
name = "grheat"
authors = [{name = "Scott Prahl", email = "scott.prahl@oit.edu"}]
description = "Green's functions for point, line, and planar heat sources."
requires-python = ">=3.10"
readme = "README.rst"
license = "MIT"
license-files = ["LICENSE.txt"]
keywords = [
    "temperature",
    "heat transfer",
    "Green's function",
    "point source",
    "line source",
    "plane source",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "numpy",
    "matplotlib",
    "scipy",
]

[project.optional-dependencies]
docs = [
    "Sphinx>=8.1.3",
    "nbsphinx>=0.9.7",
    "ipython",
    "sphinx_automodapi",
    "sphinx_rtd_theme",
]
dev = [
    "pytest",
    "requests",
    "PyYAML",
    "ruff",
    "yamllint",
    "rstcheck[sphinx,toml]",
    "pylint",
    "pyroma",
    "black[jupyter]",
    "build",
    "check-manifest",
    "libarchive-c",
    "setuptools",
    "jupyterlab",
    "nbconvert",
    "nbformat",
]
lite = [
    "jupyterlite-core>=0.7,<0.8",
    "jupyterlite-pyodide-kernel>=0.7,<0.8",
]

[project.urls]
Homepage = "https://github.com/scottprahl/grheat"
Documentation = "https://grheat.readthedocs.io"
Source = "https://github.com/scottprahl/grheat"
Tracker = "https://github.com/scottprahl/grheat/issues"
Changelog = "https://github.com/scottprahl/grheat/blob/main/CHANGELOG.rst"

[tool.setuptools.dynamic]
version = {attr = "grheat.__version__"}

[tool.black]
line-length = 110
target-version = ["py310", "py311", "py312", "py313", "py314"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--ignore=tests/test_all_notebooks.py",
]

[tool.pylint]
disable = [
    "cyclic-import",
    "duplicate-code",
    "invalid-name",
    "line-too-long",
    "too-many-arguments",
    "too-many-locals",
    "too-many-positional-arguments",
    "consider-using-f-string",
    "too-many-statements",
    "unused-variable",
    "redefined-builtin",
]
max-line-length = 110

[tool.ruff]
line-length = 110
exclude = [".git", "__pycache__", "docs", "miepython"]

[tool.ruff.lint]
select = ["D", "E", "F", "W"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D212", "F403"]
pydocstyle.convention = "google"

[tool.ruff.lint.per-file-ignores]
"docs/*.ipynb" = ["ALL"]
"tests/*.py" = ["D200", "D205", "F841"]

[tool.check-manifest]
ignore = [
    ".readthedocs.yaml",
    ".testignore",
    "Makefile",
    "release.txt",
    "docs/**",
    "grheat/jupyter_lite_config.json",
]
