[metadata]
description = Green's functions for point, line, and planar heat sources.

keywords =
    temperature
    heat transfer
    Green's function
    point source
    line source
    plane source

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Physics
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = grheat
install_requires = 
    numpy
    matplotlib
    scipy
python_requires = >=3.7

[flake8]
ignore = W503, D212, N802, N803, N806, E501, F841
per-file-ignores = 
    __init__.py:F401,F403
    setup.py:D100
exclude =
    .git,
    __pycache__,
    docs
max-line-length = 110
docstring-convention = google
